Deleting extra resume file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header>
+      <nav></nav>
       <ul>
         <li>HOME</li>
         <li>ABOUT</li>
@@ -13,14 +14,20 @@
         <li>CASE STUDIES</li>
         <li>CONTACT</li>
       </ul>
+    </nav>
     </header>
     <section class="heroImg">
       <div class="content">
         <img src="images/jv_hero_photo_2.JPG" id="pic">
         <h1>Hi! I’m Julie Vatuone. I’m a UX Designer, passionate about creating engaging, inclusive experiences.</h1>
-        <p>Placeholder</p>
         <button>Check Out My Case Studies</button>
       </div>
+    
+    <div id= "container">
+      <div class="item one">1</div>
+      <div class="item two">2/div>
+      <div class="item three">3/div>
+   </div>div>
     </div>
     <!-- The social media icon bar -->
     <div class="icon-bar">
