Updates to Homework 18

--- a/index.html
+++ b/index.html
@@ -23,12 +23,22 @@
         <button>Check Out My Case Studies</button>
       </div>
     
-    <div id= "container">
-      <div class="item one">1</div>
-      <div class="item two">2/div>
-      <div class="item three">3/div>
-   </div>div>
-    </div>
+    <div id="container">
+      <div class="item">
+<h2>User Research</h2>
+<img src="images/HW 10_Mockup_Title Page.jpg" id="userResearch">
+
+      </div>
+      <div class="item">
+        <h2>User Research</h2>
+        <img src="images/HW 10_Mockup_Title Page.jpg" id="userResearch">
+        </div>
+      <div class="item">
+        <h2>User Research</h2>
+        <img src="images/HW 10_Mockup_Title Page.jpg" id="userResearch">
+        </div>
+   </div>
+  
     <!-- The social media icon bar -->
     <div class="icon-bar">
 
