--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <title>Julie Vatuone Starter Portfolio</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="index.js" type="text/javascript">
   </head>
+  
   <body>
     <header>
-      <nav></nav>
+      <nav>
       <ul>
         <li>HOME</li>
         <li>ABOUT</li>
@@ -14,14 +16,17 @@
         <li>CASE STUDIES</li>
         <li>CONTACT</li>
       </ul>
-    </nav>
+      </nav>
     </header>
     <section class="heroImg">
+      </div>
       <div class="content">
         <img src="images/jv_hero_photo_2.JPG" id="pic">
-        <h1>Hi! I’m Julie Vatuone. I’m a UX Designer, passionate about creating engaging, inclusive experiences.</h1>
-        <button>Check Out My Case Studies</button>
+        <h1>Hi! I’m Julie Vatuone. I’m a UX/UI Designer, passionate about creating engaging, inclusive experiences.</h1>
+       <form method="get" action="images/RESUME_Jvatuone_uxui_online.pdf">
+       <button class="button">Download My Resume</button></form>
       </div>
+
     
     <div id="container">
       <div class="item">
@@ -30,12 +35,12 @@
 
       </div>
       <div class="item">
-        <h2>User Research</h2>
-        <img src="images/HW 10_Mockup_Title Page.jpg" id="userResearch">
+        <h2>Wireframes</h2>
+        <img src="images/alvaro-reyes-wireframe-unsplash.jpeg" id="userResearch">
         </div>
       <div class="item">
-        <h2>User Research</h2>
-        <img src="images/HW 10_Mockup_Title Page.jpg" id="userResearch">
+        <h2>Case Studies</h2>
+        <img src="images/ben-kolde-case study-unsplash.jpeg" id="userResearch">
         </div>
    </div>
   
@@ -53,6 +58,11 @@
         <li>CASE STUDIES</li>
         <li>CONTACT</li>
       </ul>
+      <div class="copyright">
+        <p>© Copyright Julie Vatuone 2021</p>
+    </div>
     </footer>
-  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="index.js"></script>
+</body>
 </html>
